test/Fail/NoQualifiedInstances.err
NoQualifiedInstances.agda:10.8-9: error: [InstanceNoCandidate]
No instance of type A was found in scope.
when checking that the expression f has type A
